add function get user & roles, add validation middleware
