# backend/controllers/userController.js
@@ -1,80 +1,94 @@
+const { Op } = require('sequelize'); 
 const { User, Role } = require('../models');
 const ResponseApiHandler = require('../utils/ResponseApiHandler');
-const { Op } = require('sequelize'); 
 
 // Fungsi untuk register user
 const registerUser = async (req, res) => {
-    const { username, password, email, address, phone, roles } = req.body;
+  const { username, password, email, address, phone, roles } = req.body;
 
-    try {
-        // Periksa apakah username atau email sudah digunakan
-        const existingUser = await User.findOne({ 
-            where: { 
-                [Op.or]: [{ username }, { email }] 
-            } 
-        });
+  try {
+      // Periksa apakah username atau email sudah digunakan
+      const existingUser = await User.findOne({ 
+          where: { 
+              [Op.or]: [{ username }, { email }] 
+          } 
+      });
 
-        if (existingUser) {
-            return ResponseApiHandler.error(res, 'Username or Email already exists', null, 400);
-        }
+      if (existingUser) {
+          return ResponseApiHandler.error(res, 'Username or Email already exists', null, 400);
+      }
 
-        // Membuat pengguna baru dengan informasi tambahan
-        const newUser = await User.create({ 
-            username, 
-            password, 
-            email, 
-            address, 
-            phone 
-        });
+      // Membuat pengguna baru dengan informasi tambahan
+      const newUser = await User.create({ 
+          username, 
+          password, 
+          email, 
+          address, 
+          phone 
+      });
 
-        // Menangani peran pengguna (roles)
-        if (roles && roles.length > 0) {
-            const roleRecords = await Role.findAll({ where: { name: roles } });
-            await newUser.addRoles(roleRecords);
-        } else {
-            const defaultRole = await Role.findOne({ where: { name: 'user' } });
-            if (defaultRole) {
-                await newUser.addRole(defaultRole);
-            }
-        }
+      // Menangani peran pengguna (roles)
+      if (roles && roles.length > 0) {
+          const roleRecords = await Role.findAll({ where: { name: roles } });
+          await newUser.addRoles(roleRecords);
+      } else {
+          const defaultRole = await Role.findOne({ where: { name: 'user' } });
+          if (defaultRole) {
+              await newUser.addRole(defaultRole);
+          }
+      }
 
-        return ResponseApiHandler.success(res, 'User registered successfully', {
-            id: newUser.id,
-            username: newUser.username,
-            email: newUser.email,
-            address: newUser.address,
-            phone: newUser.phone
-        }, 201);
-        
-    } catch (err) {
-        console.error(err);
-        return ResponseApiHandler.error(res, 'Server error', err.message);
-    }
+      return ResponseApiHandler.success(res, 'User registered successfully', {
+          id: newUser.id,
+          username: newUser.username,
+          email: newUser.email,
+          address: newUser.address,
+          phone: newUser.phone
+      }, 201);
+      
+  } catch (err) {
+      console.error(err);
+      return ResponseApiHandler.error(res, 'Server error', err.message);
+  }
 };
+
+const getUsers = async (req, res) => {
+  try {
+    const users = await User.findAll({
+      include: Role,
+    });
+
+    return ResponseApiHandler.success(res, 'Users retrieved successfully', { users });
+  } catch (err) {
+    return ResponseApiHandler.error(res, 'Server error', err.message);
+  }
+};
+
 
 // Fungsi untuk menambahkan role ke user
 const addRoleToUser = async (req, res) => {
-    const { userId, role } = req.body;
+  const { username, role } = req.body;
 
-    try {
-        const user = await User.findByPk(userId);
-        if (!user) {
-        return ResponseApiHandler.error(res, 'User not found', null, 404);
-        }
+  try {
+      const user = await User.findOne({ where: { username } });
+      if (!user) {
+          return ResponseApiHandler.error(res, 'User not found', null, 404);
+      }
 
-        const roleRecord = await Role.findOne({ where: { name: role } });
-        if (!roleRecord) {
-        return ResponseApiHandler.error(res, 'Role not found', null, 404);
-        }
+      const roleRecord = await Role.findOne({ where: { name: role } });
+      if (!roleRecord) {
+          return ResponseApiHandler.error(res, 'Role not found', null, 404);
+      }
 
-        await user.addRole(roleRecord);
+      await user.addRole(roleRecord);
 
-        return ResponseApiHandler.success(res, `Role ${role} added to user ${user.username}`);
-    } catch (err) {
-        console.error(err);
-        return ResponseApiHandler.error(res, 'Server error', err.message);
-    }
+      return ResponseApiHandler.success(res, `Role ${role} added to user ${user.username}`);
+  } catch (err) {
+      console.error(err);
+      return ResponseApiHandler.error(res, 'Server error', err.message);
+  }
 };
+
 
 // Fungsi untuk mendapatkan role berdasarkan username
 const getRolesByUsername = async (req, res) => {
@@ -164,5 +178,40 @@ const restoreUser = async (req, res) => {
     }
 };
 
-module.exports = {registerUser, addRoleToUser, getRolesByUsername, updateUser, softDeleteUser, restoreUser};
+const createRole = async (req, res) => {
+  const { name } = req.body;
+
+  try {
+    const role = await Role.create({ name });
+
+    return ResponseApiHandler.success(res, 'Role created successfully', {
+      id: role.id,
+      name: role.name,
+    }, 201);
+  } catch (err) {
+    return ResponseApiHandler.error(res, 'Server error', err.message);
+  }
+};
+
+const getRoles = async (req, res) => {
+  try {
+    const roles = await Role.findAll();
+
+    return ResponseApiHandler.success(res, 'Roles retrieved successfully', { roles });
+  } catch (err) {
+    return ResponseApiHandler.error(res, 'Server error', err.message);
+  }
+};
+
+module.exports = {
+  registerUser, 
+  getUsers,
+  addRoleToUser, 
+  getRolesByUsername, 
+  updateUser, 
+  softDeleteUser, 
+  restoreUser,
+  createRole,
+  getRoles
+};
 
