# backend/routers/userRoutes.js
@@ -1,16 +1,20 @@
 const express = require('express');
-const { registerUser, addRoleToUser, getRolesByUsername, updateUser, softDeleteUser, restoreUser } = require('../controllers/userController');
+const userController = require('../controllers/userController');
 const { authenticateToken } = require('../middlewares/authMiddleware');
 const { authorizeRoles } = require('../middlewares/roleMiddleware');
+const { validateRegisterUser } = require('../middlewares/validationMiddleware');
 
 const router = express.Router();
 
 // Route untuk register
-router.post('/register', registerUser);
-router.put('/update/:userId', updateUser);
-router.post('/add-role', addRoleToUser);
-router.patch('/delete/:userId', authenticateToken, authorizeRoles('admin'), softDeleteUser);
-router.patch('/restore/:userId', authenticateToken, authorizeRoles('admin'), restoreUser);
-router.get('/:username/roles', getRolesByUsername);
+router.post('/register', validateRegisterUser, userController.registerUser);
+router.get('/get-users', authenticateToken, authorizeRoles('admin'), userController.getUsers);
+router.put('/update/:userId', userController.updateUser);
+router.patch('/delete/:userId', authenticateToken, authorizeRoles('admin'), userController.softDeleteUser);
+router.patch('/restore/:userId', authenticateToken, authorizeRoles('admin'), userController.restoreUser);
+router.get('/:username/roles', userController.getRolesByUsername);
+router.post('/add-role', userController.addRoleToUser);
+router.get('/get-roles', userController.getRoles);
+router.post('/create-role', userController.createRole);
 
 module.exports = router;
